removing numbers and shortening nav links to stop wrapping

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -150,7 +150,6 @@ span.r {
 }
 
 .nav {
-  font-size: x-small;
 }
 
 #database_auth_form table td {
